--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ngx-formly/core": "^6.0.0-beta",
+    "@ngx-formly/material": "^6.0.0-beta"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@ngx-formly/schematics": "^6.0.0-beta.3",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.1.0",
