--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@ts-stack/markdown": "^1.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -38,6 +39,7 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.14",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.1.2",
     "typescript": "~4.7.2"
   }
